--- a/DAY_0212/RS232.md
+++ b/DAY_0212/RS232.md
@@ -9,11 +9,11 @@
 * 將RS232的跳線接上
 * 下方的RS485跳線斷開
 
-  ![image]()
+  ![image](https://github.com/hamster-allen/STM32_Learn/blob/master/DAY_0212/RS232_picture/RS232%E8%B7%B3%E7%B7%9A.png)
 
 * 開發版跳線斷開
 
-  ![image]()
+  ![image](https://github.com/hamster-allen/STM32_Learn/blob/master/DAY_0212/RS232_picture/%E5%8F%B3%E4%B8%8A%E6%96%B9PB10_PB11%E8%B7%B3%E7%B7%9A.png)
 
 > RS485和右上角的PB10、PB11都占用PB10和PB11<br>
 > 如果不斷開會在RS232進行通訊時，造成干擾or通訊錯誤<br>
