--- a/DAY_0212/RS232.md
+++ b/DAY_0212/RS232.md
@@ -18,15 +18,24 @@
 > RS485和右上角的PB10、PB11都占用PB10和PB11<br>
 > 如果不斷開會在RS232進行通訊時，造成干擾or通訊錯誤<br>
 
+<br>
+
+* PB10、PB11就是USART3
+* PB10->STM32的發送端(TX)，連接外部設備的接收端(RX)
+* PB11->STM32的接收端(RX)，連接外部設備的發送端(TX)
+
+  ![image](https://github.com/hamster-allen/STM32_Learn/blob/master/DAY_0212/RS232_picture/PB10_PB11%E7%AD%89%E6%96%BCUSART3.png)
+
+  ![image](https://github.com/hamster-allen/STM32_Learn/blob/master/DAY_0212/RS232_picture/PB10_PB11%E6%8E%A5%E5%88%B0PC_RXD_PCTXD.png)
 
 
+* USART3透過跳線(P13)連接至電平轉換晶片(SP3232)
+* SP3232是專門用於RS232電平轉換，可以將TTRL的電平轉換為RS232的標準電平
+* 周遭連接許多電容都是根據官方給出的資料連接的(SP32322第7頁)
 
+  ![image](https://github.com/hamster-allen/STM32_Learn/blob/master/DAY_0212/RS232_picture/3-RS232%E6%8E%A5%E5%8F%A3.png)
 
-
-
-
-
-
+  ![image]()
 
 
 
