--- a/DAY_0212/RS232.md
+++ b/DAY_0212/RS232.md
@@ -31,14 +31,49 @@
 
 * USART3透過跳線(P13)連接至電平轉換晶片(SP3232)
 * SP3232是專門用於RS232電平轉換，可以將TTRL的電平轉換為RS232的標準電平
-* 周遭連接許多電容都是根據官方給出的資料連接的(SP32322第7頁)
 
   ![image](https://github.com/hamster-allen/STM32_Learn/blob/master/DAY_0212/RS232_picture/3-RS232%E6%8E%A5%E5%8F%A3.png)
 
-  ![image]()
+* 周遭連接許多電容都是根據官方給出的資料連接的(SP32322第7頁)
+  
+  ![image](https://github.com/hamster-allen/STM32_Learn/blob/master/DAY_0212/RS232_picture/SP3232_Datasheet_P7.png)
 
 
+# 程序
 
+
+```
+while(1)
+{
+  if(!GPIO_ReadInputDataBit(TOUCH_KEYPORT,TOUCH_KEY_A))          //當觸摸按鍵被按下時，使用USART3發送出資料
+  {                                                              //發送後，在OLED上顯示發送的資料
+    USART3_printf("%c",'A');
+    OLED_DISPLAY_8x16(6,4*8,'A');
+  }
+  else if(!GPIO_ReadInputDataBit(TOUCH_KEYPORT,TOUCH_KEY_B))
+  {
+    USART3_printf("%c",'B');
+    OLED_DISPLAY_8x16(6,4*8,'B');
+  }	
+  else if(!GPIO_ReadInputDataBit(TOUCH_KEYPORT,TOUCH_KEY_C))
+  {
+    USART3_printf("%c",'C');
+    OLED_DISPLAY_8x16(6,4*8,'C');
+  }
+  else if(!GPIO_ReadInputDataBit(TOUCH_KEYPORT,TOUCH_KEY_D))
+  {
+    USART3_printf("%c",'D');
+    OLED_DISPLAY_8x16(6,4*8,'D');
+  }
+
+  //接收
+  if(USART_GetFlagStatus(USART3,USART_FLAG_RXNE) != RESET)      //取得USART3待處理的旗標
+  {
+    a = USART_ReceiveData(USART3);                              //取得接收資料
+    OLED_DISPLAY_8x16(6,11*8,a);                                //在OLED上顯示
+  }
+}
+```
 
 
 
