--- a/DAY_0212/RS232.md
+++ b/DAY_0212/RS232.md
@@ -11,7 +11,7 @@
 
   ![image](https://github.com/hamster-allen/STM32_Learn/blob/master/DAY_0212/RS232_picture/RS232%E8%B7%B3%E7%B7%9A.png)
 
-* 開發版跳線斷開
+* 開發版右上方跳線斷開
 
   ![image](https://github.com/hamster-allen/STM32_Learn/blob/master/DAY_0212/RS232_picture/%E5%8F%B3%E4%B8%8A%E6%96%B9PB10_PB11%E8%B7%B3%E7%B7%9A.png)
 
