--- a/DAY_0214/RS485.md
+++ b/DAY_0214/RS485.md
@@ -1,1 +1,51 @@
 # RS485原理與驅動
+
+***一樣基於USART***<br>
+***相比於RS232穩定性與傳輸距離更高更遠***<br>
+
+## 前置工作與原理
+
+* 斷開RS232跳線
+* 連接RS485跳線
+
+  ![image]()
+
+* 開發板右上方跳線斷開
+
+  ![image]()
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
