--- a/DAY_0214/RS485.md
+++ b/DAY_0214/RS485.md
@@ -8,20 +8,29 @@
 * 斷開RS232跳線
 * 連接RS485跳線
 
-  ![image]()
+  ![image](https://github.com/hamster-allen/STM32_Learn/blob/master/DAY_0214/RS485_picture/RS232_RS485%E8%B7%B3%E7%B7%9A.png)
 
 * 開發板右上方跳線斷開
 
+  ![image](https://github.com/hamster-allen/STM32_Learn/blob/master/DAY_0214/RS485_picture/%E5%8F%B3%E4%B8%8A%E6%96%B9PB10_PB11%E8%B7%B3%E7%B7%9A.png)
+
+> RS485和右上角的PB10、PB11都占用PB10和PB11<br>
+> 如果不斷開會在RS232進行通訊時，造成干擾or通訊錯誤<br>
+
+<br>
+
+* RS485連接方式
+* A端連接到另一個開發板的A端
+* B端連接到另一個開發板的B端
+
   ![image]()
 
+## 效果呈現
 
+* 下方開發板發送`'D'`，上方的開發板接收到`'D'`
+* 上方開發板發送`'A'`，下方的開發板接收到`'A'`
 
-
-
-
-
-
-
+  ![image]()
 
 
 
