--- a/DAY_0212/RS232.md
+++ b/DAY_0212/RS232.md
@@ -30,7 +30,7 @@
 
 
 * USART3透過跳線(P13)連接至電平轉換晶片(SP3232)
-* SP3232是專門用於RS232電平轉換，可以將TTRL的電平轉換為RS232的標準電平
+* SP3232是專門用於RS232電平轉換，可以將TTL的電平轉換為RS232的標準電平
 
   ![image](https://github.com/hamster-allen/STM32_Learn/blob/master/DAY_0212/RS232_picture/3-RS232%E6%8E%A5%E5%8F%A3.png)
 
