--- a/DAY_0214/RS485.md
+++ b/DAY_0214/RS485.md
@@ -19,18 +19,40 @@
 
 <br>
 
+* PB10、PB11就是USART3
+* PB10->STM32的發送端(TX)，連接外部設備的接收端(RX)
+* PB11->STM32的接收端(RX)，連接外部設備的發送端(TX)
+* PA8用於收發選擇接口，控制總線的收發
+
+  ![image]()
+
+* USART3與PA8透過跳線(P22)連接到轉換電平晶片(SP3485)
+* SP3485是專門將TTL電平轉換為RS485電平的晶片
+
+  ![image]()
+
+
+
 * RS485連接方式
 * A端連接到另一個開發板的A端
 * B端連接到另一個開發板的B端
 
-  ![image]()
+  ![image](https://github.com/hamster-allen/STM32_Learn/blob/master/DAY_0214/RS485_picture/RS485%E9%80%A3%E6%8E%A5.png)
+
+* 通訊距離比較
+  
+|通訊|距離|
+|:---:|:---:|
+|TTL|2M|
+|RS232|20M|
+|RS485|1000M|
 
 ## 效果呈現
 
 * 下方開發板發送`'D'`，上方的開發板接收到`'D'`
 * 上方開發板發送`'A'`，下方的開發板接收到`'A'`
 
-  ![image]()
+  ![image](https://github.com/hamster-allen/STM32_Learn/blob/master/DAY_0214/RS485_picture/%E6%95%88%E6%9E%9C%E5%91%88%E7%8F%BE.png)
 
 
 
