--- a/DAY_0214/RS485.md
+++ b/DAY_0214/RS485.md
@@ -28,6 +28,8 @@
 
 * USART3與PA8透過跳線(P22)連接到轉換電平晶片(SP3485)
 * SP3485是專門將TTL電平轉換為RS485電平的晶片
+* R30、R31和R32電阻是為了提高穩定性
+* 透過PA8控制總線的輸出狀態(1為發送，0為接收)
 
   ![image]()
 
