--- a/DAY_0214/RS485.md
+++ b/DAY_0214/RS485.md
@@ -24,14 +24,14 @@
 * PB11->STM32的接收端(RX)，連接外部設備的發送端(TX)
 * PA8用於收發選擇接口，控制總線的收發
 
-  ![image]()
+  ![image](https://github.com/hamster-allen/STM32_Learn/blob/master/DAY_0214/RS485_picture/%E9%9B%BB%E8%B7%AF%E5%8E%9F%E7%90%86%E5%9C%96.png)
 
 * USART3與PA8透過跳線(P22)連接到轉換電平晶片(SP3485)
 * SP3485是專門將TTL電平轉換為RS485電平的晶片
 * R30、R31和R32電阻是為了提高穩定性
 * 透過PA8控制總線的輸出狀態(1為發送，0為接收)
 
-  ![image]()
+  ![image](https://github.com/hamster-allen/STM32_Learn/blob/master/DAY_0214/RS485_picture/%E9%9B%BB%E8%B7%AF%E5%8E%9F%E7%90%86%E5%9C%962.png)
 
 
 
@@ -49,6 +49,8 @@
 |RS232|20M|
 |RS485|1000M|
 
+<br>
+
 ## 效果呈現
 
 * 下方開發板發送`'D'`，上方的開發板接收到`'D'`
@@ -56,15 +58,49 @@
 
   ![image](https://github.com/hamster-allen/STM32_Learn/blob/master/DAY_0214/RS485_picture/%E6%95%88%E6%9E%9C%E5%91%88%E7%8F%BE.png)
 
+<br>
 
+## 程序
 
+* 定義
+  * `#define RS485PORT	GPIOA`定義接口
+  * `#define RS485_RE	GPIO_Pin_8`定義接口(RS485_RE)
 
+#### 【初始化】
+```
+void RS485_Init(void)
+{
+  GPIO_InitTypeDef  GPIO_InitStructure;
+  GPIO_InitStructure.GPIO_Pin = RS485_RE;             //設置IO                        
+  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;    //將IO設置為推挽輸出模式       
+  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;   //設置IO速度   
+  GPIO_Init(RS485PORT, &GPIO_InitStructure);
+  GPIO_ResetBits(RS485PORT,RS485_RE);                 //控制總線狀態(1為發送，0為接收)
+}
+```
 
+#### 【RS485發送】
 
+**與USART的發送函數相同，只是在發送前加入了將總線狀態設為發送狀態的指令，結束發送時將狀態設置為接收狀態**
 
-
-
-
+```
+void RS485_printf (char *fmt, ...)
+{
+  char buffer[USART3_REC_LEN+1];                         //數據長度
+  u8 i = 0;
+  va_list arg_ptr;
+  GPIO_SetBits(RS485PORT,RS485_RE);                      //將控制總線狀態的腳位設為1表示發送狀態
+  va_start(arg_ptr, fmt);  
+  vsnprintf(buffer, USART3_REC_LEN+1, fmt, arg_ptr);
+  while ((i < USART3_REC_LEN) && (i < strlen(buffer)))
+  {
+    USART_SendData(USART3, (u8) buffer[i++]);
+    while (USART_GetFlagStatus(USART3, USART_FLAG_TC) == RESET); 
+  }
+  va_end(arg_ptr);
+  GPIO_ResetBits(RS485PORT,RS485_RE);                   //將控制總線狀態的腳位設為0表示接收狀態
+}
+```
 
 
 
