--- a/DAY_0225/MPU6050.md
+++ b/DAY_0225/MPU6050.md
@@ -6,7 +6,7 @@
 * 左邊：三軸加速度的原始值
 * 右邊：三軸陀螺儀的原始值
 
-![效果呈現]()
+![效果呈現](https://github.com/hamster-allen/STM32_Learn/blob/master/DAY_0225/MPU6050_picture/%E6%95%88%E6%9E%9C%E5%91%88%E7%8F%BE.png)
 
 <br>
 
@@ -27,7 +27,7 @@
 
 ## 六軸示意圖
 
-![六軸示意圖]()
+![六軸示意圖](https://github.com/hamster-allen/STM32_Learn/blob/master/DAY_0225/MPU6050_picture/%E5%85%AD%E8%BB%B8%E7%A4%BA%E6%84%8F%E5%9C%96.png)
 
 <br>
 
@@ -54,7 +54,7 @@ MPU6050的地址是0xD0，官方手冊給的則是0x68<br>
   * `ACCEL_ZOUT_H`Z軸輸出-高8位
   * `ACCEL_ZOUT_L`Z軸輸出-低8位
 
-![加速度傳感器暫存器地址]()
+![加速度傳感器暫存器地址](https://github.com/hamster-allen/STM32_Learn/blob/master/DAY_0225/MPU6050_picture/%E5%8A%A0%E9%80%9F%E5%BA%A6%E5%82%B3%E6%84%9F%E5%99%A8%E6%9A%AB%E5%AD%98%E5%99%A8%E5%9C%B0%E5%9D%80.png)
 
 * 陀螺儀傳感器
   * `GYRO_XOUT_H`X軸輸出-高8位
@@ -64,10 +64,10 @@ MPU6050的地址是0xD0，官方手冊給的則是0x68<br>
   * `GYRO_ZOUT_H`Z軸輸出-高8位
   * `GYRO_ZOUT_L`Z軸輸出-低8位
 
-![陀螺儀傳感器暫存器地址]()
+![陀螺儀傳感器暫存器地址](https://github.com/hamster-allen/STM32_Learn/blob/master/DAY_0225/MPU6050_picture/%E9%99%80%E8%9E%BA%E5%84%80%E5%82%B3%E6%84%9F%E5%99%A8%E6%9A%AB%E5%AD%98%E5%99%A8%E5%9C%B0%E5%9D%80.png)
 
 
-> MPU6050暫存器表詳情參閱[MPU6000暫存器和描述(英文)(P6)]()
+> MPU6050暫存器表詳情參閱[MPU6000暫存器和描述(英文)(P6)](https://github.com/hamster-allen/STM32_Learn/blob/master/DAY_0225/MPU6050_%E7%9B%B8%E9%97%9C%E6%89%8B%E5%86%8A/MPU-6000%E6%9A%AB%E5%AD%98%E5%99%A8%E5%92%8C%E6%8F%8F%E8%BF%B0(%E8%8B%B1%E6%96%87).pdf)
 
 <br>
 
@@ -166,8 +166,8 @@ void MPU6050_Init(void)
   I2C_SAND_BYTE(MPU6050_ADD,MPU6050_RA_GYRO_CONFIG,0x18);         //【陀螺儀配置暫存器】陀螺儀自檢及測量範圍，典型值：0x18(不自檢，2000deg/s)
 }
 ```
-> 加速度配置暫存器說明參閱[MPU6000暫存器與描述(P15)]()<br>
-> 陀螺儀配置暫存器說明參閱[MPU6000暫存器與描述(P14)]()
+> 加速度配置暫存器說明參閱[MPU6000暫存器與描述(P15)](https://github.com/hamster-allen/STM32_Learn/blob/master/DAY_0225/MPU6050_%E7%9B%B8%E9%97%9C%E6%89%8B%E5%86%8A/MPU-6000%E6%9A%AB%E5%AD%98%E5%99%A8%E5%92%8C%E6%8F%8F%E8%BF%B0(%E8%8B%B1%E6%96%87).pdf)<br>
+> 陀螺儀配置暫存器說明參閱[MPU6000暫存器與描述(P14)](https://github.com/hamster-allen/STM32_Learn/blob/master/DAY_0225/MPU6050_%E7%9B%B8%E9%97%9C%E6%89%8B%E5%86%8A/MPU-6000%E6%9A%AB%E5%AD%98%E5%99%A8%E5%92%8C%E6%8F%8F%E8%BF%B0(%E8%8B%B1%E6%96%87).pdf)
 
 #### 【MPU6050讀出原始數據之函數】
 **讀取加速度&陀螺儀的原始數據**<br>
